--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,31 @@
 body {
     background-color: #2b2b2b;
+    font-family: 'Open Sans', sans-serif;
 }
 
+#ti {
+	margin: auto;
+	position: relative;
+	font-size: 10rem;
+}
+
+
 #all {
-	
+	box-sizing: border-box;
+    position: relative;
+    margin: auto;
+    margin-top: 15%;
+    width: 24rem;
+    width: 26rem;
+    border: 1px black dotted;
+    padding: 2rem;
+    font-size: 3rem;
+}
+
+input {
+	font-size: 3rem;
+    background: transparent;
+    border: none;
+    border-bottom: 1px black dotted;
+    width: 19%;
 }
